--- a/GloomeClasses/GloomeClasses/GloomeClasses.csproj
+++ b/GloomeClasses/GloomeClasses/GloomeClasses.csproj
@@ -53,9 +53,7 @@
   <Content Include="assets\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </Content>
-  <None Remove="assets\gloomeclasses\patches\dropMultipliers\farming\charcoal.json" />
-  <None Remove="assets\gloomeclasses\patches\dropMultipliers\farming\leaves.json" />
-  <None Remove="assets\gloomeclasses\patches\dropMultipliers\farming\logs.json" />
+  <None Remove="assets\gloomeclasses\patches\dropMultipliers\grass.json" />
   <None Remove="assets\gloomeclasses\patches\newCharacterTraits - Copy.json" />
   <None Remove="assets\gloomeclasses\patches\newCharacterTraits.json" />
   <None Remove="assets\gloomeclasses\patches\newRecipeTraits - Copy.json" />
