Completed Cavestability loss behavior addition to player behavior
Completed clayform patch for players

started alchemybarrel work

--- a/GloomeClasses/GloomeClasses/GloomeClasses.csproj
+++ b/GloomeClasses/GloomeClasses/GloomeClasses.csproj
@@ -69,6 +69,7 @@
 <ItemGroup>
   <Folder Include="assets\game\patches\" />
   <Folder Include="assets\gloomeclasses\itemtypes\jonas\" />
+  <Folder Include="src\Alchemy\Recipe\" />
 </ItemGroup>
 
 </Project>
