Slight reorganizing of where things are so it looks better. The only thing that works for sure is that the ModSystem has been utterly stripped to nothing, the API call has been set and a Logger for the mod setup for debugging and error purposes. Apart from this, the DreadBehavior works now and is the only thing being registered. Anything commented out is only kept around for later checking if it works.

--- a/GloomeClasses/GloomeClasses/GloomeClasses.csproj
+++ b/GloomeClasses/GloomeClasses/GloomeClasses.csproj
@@ -70,6 +70,7 @@
   <Folder Include="assets\game\patches\" />
   <Folder Include="assets\gloomeclasses\itemtypes\jonas\" />
   <Folder Include="src\Alchemy\Recipe\" />
+  <Folder Include="src\dreadBehavior\" />
 </ItemGroup>
 
 </Project>
