Actually fixed the reported patch issues that I missed!

--- a/GloomeClasses/GloomeClasses/assets/gloomeclasses/patches/apply-healhacked-behavior-patch.json
+++ b/GloomeClasses/GloomeClasses/assets/gloomeclasses/patches/apply-healhacked-behavior-patch.json
@@ -3,13 +3,13 @@
 		"op": "addmerge",
 		"path": "/variantgroups/0/states/-",
 		"value": "corrupt-sawblade",
-		"file": "game:entities/land/locust-hacked.json"
+		"file": "game:entities/lore/locust-hacked.json"
 	},
 	{
 		"op": "addmerge",
 		"path": "/attributes/hackedEntityByType/*-corrupt-sawblade",
 		"value": "locust-corrupt-sawblade-hacked",
-		"file": "game:entities/land/locust.json"
+		"file": "game:entities/lore/locust.json"
 	},
 	{
 		"op": "addmerge",
