--- a/.gitignore
+++ b/.gitignore
@@ -362,7 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# vscode
-.vscode/
+# local issue track
 ISSUES.md
 BUGS_TO_FIX.md
